# f1-game-udp-parser

./: .gitignore  .npmignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  f1-game-udp-parser-0.1.5.tgz  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml  test.yml
lib/: index.js  index.spec.ts  index.ts
lib/constants/: buttonFlags.js  buttonFlags.json  drivers.js  drivers.ts  eras.js  eras.ts  ersDeployMode.js  ersDeployMode.ts  eventCodes.js  formulas.js  formulas.ts  fuelMix.js  fuelMix.ts  index.js  index.ts  nationalities.js  nationalities.ts  packets.js  packets.ts  safetyCarStatuses.js  safetyCarStatuses.ts  sessionTypes.js  sessionTypes.ts  surfaces.js  surfaces.ts  teams.js  tracks.js  tyres.js  tyres.ts  weather.js  weather.ts
lib/mocks/: PacketCarStatusData.ts  PacketEventData.ts  PacketLapData.ts  PacketMotionData.ts  PacketSessionData.ts  index.ts
native/: Cargo.toml
native/src/: lib.rs
native/src/parser/: mod.rs  parserCarSetupData.rs  parserCarStatusData.rs  parserCarTelemetryData.rs  parserEventData.rs  parserHeader.rs  parserInfo.rs  parserLapData.rs  parserMotionData.rs  parserParticipantsData.rs  parserSessionData.rs
src/: index.ts  types.ts
src/constants/: buttonFlags.ts  eventCodes.ts  index.ts  teams.ts  tracks.ts  types.ts
src/mocks/: PacketCarSetupData.ts  PacketCarTelemetryData.ts  PacketHeader.ts  PacketParticipantsData.ts
